// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Digital fund should create success emails 1`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>
To: Example Person <example@example.com>
Subject: Thank you for getting in touch with The National Lottery Community
 Fund!
MIME-Version: 1.0

Content-Type: text/plain
Content-Transfer-Encoding: quoted-printable

 Thank you for getting in touch.

Here is a copy of the information you've =
submitted. We'll be in touch as soon as we can.

YOUR DETAILS
YOUR NAME
Example Person

EMAIL ADDRESS
example@example.com

ORGANISATION NAME
Test Organisation

DATA PROTECTION
The National Lottery Community Fund is a=
 public body with a duty to distribute National Lottery and other money in =
grants for good
causes. We use the personal data you provide, such as =
contact details for individuals at your organisation, to help you apply for
a grant and to assess your application. We may share your personal data =
with organisations which help us with our grant making
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data
which they need to carry out their work and subject to appropriate safety =
measures. Our Data Protection and Privacy Notice gives
more information about how we store and use personal data and the lawful =
basis for this. Please read the full Notice which is
published on our website at www.tnlcommunityfund.org.uk/data-protection =
[https://www.tnlcommunityfund.org.uk/data-protection] or
contact us to request a hard copy. The Notice may be updated from time to =
time.
Content-Type: text/html
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
       =20
            <style>
                @import url('https://use.typekit.net/yyc1dgh.css');
            </style>
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,p{color:#333;font-weight:400;font-size:2=
0px;line-height:1.35}.fonts-loaded body,.fonts-loaded =
p{font-family:caecilia-sans-text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,=
h6{font-weight:700;line-height:1.2;margin:0 0 20px;color:#e5007d}.=
fonts-loaded h1,.fonts-loaded h2,.fonts-loaded h3,.fonts-loaded h4,.=
fonts-loaded h5,.fonts-loaded h6{font-family:caecilia,=
sans-serif}h1{font-size:26px}h2{font-size:22px}h3{font-size:18px}h4{font-si=
ze:16px}h5{font-size:14px}h6{font-size:12px}a{color:#0075b0;font-weight:800=
}.logo{margin-bottom:20px;display:block}.logo img{width:200px}.summary =
h4{border-bottom:1px solid #e5007d;padding-bottom:3px}.summary h4,.summary =
h5{font-weight:800}small{display:block;font-size:11px;color:#666;margin-bot=
tom:10px}.space-above{margin-top:50px}
/*# sourceMappingURL=3Demails-rebran=
d.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: =
10px; margin: auto; color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">
       =20
            <div class=3D\\"logo\\" =
style=3D\\"margin-bottom: 20px; display: block;\\"><img alt=3D\\"\\" =
src=3D\\"data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMj=
AwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTEuMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5L=
jU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLjg5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5=
LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzLjMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0=
xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAxLjg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMj=
MtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyL=
jM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMTQgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTgu=
NjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwLTQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTY=
tMS42OSAxNCAxNCAwIDAgMC01LjUyIDEgMTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLj=
Y2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSAxNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxI=
DEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjgg=
MTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3IDE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCA=
wIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuOD=
QgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQuMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5I=
DAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwIDEgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEg=
MjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExIDUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCA=
yOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5ID=
AgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTEuODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2I=
DExLjA2IDAgMCAwIDMuOC0yLjkxIDEzIDEzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAw=
IDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwLTIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjg=
tMi45MSAxMi43OCAxMi43OCAwIDAgMC0xMC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLj=
kxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzUgNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxI=
DEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAx=
MS44MSAxMS44MSAwIDAgMCA1LjEyIDEuMDd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWw=
xMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOG=
gtNy4xNGwtOS41OC0xNi44LTEgMjguODFIMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExM=
WwxMS43MS0yMS40NGgxMi41M2wyLjI4IDQ5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2=
LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4LjgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDE=
xIDAgMCAwIDEuODggNi42NHExLjg4IDIuNTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LT=
IuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS44NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuM=
zMgMCAwIDEtMS41NSA4LjUxIDE3LjkyIDE3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUg=
MCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgMCAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTg=
uNTUtMS40IDE5LjczIDE5LjczIDAgMCAxLTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LT=
YuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQtOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40M=
VY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMTkuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAw=
aDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyLjk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0=
xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0ID=
ktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXYxOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhd=
GggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNTJ2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcu=
MzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoNi43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTY=
gNS44MSAxMS43MyAxMS43MyAwIDAgMCAxLjk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOT=
FhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSAxIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3I=
DguODcgMCAwIDAgMy42Ny0yLjkyIDEyIDEyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAw=
IDAgMCAuNTYtNS44MXYtMjcuNDhoNi43NnYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDc=
uNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xID=
I0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwI=
DAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMCAwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUu=
NjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4OWwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk=
5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAwIDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMS=
A4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwL=
jU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOSAxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcu=
MzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xIDQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS4=
0MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LT=
QuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTguNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yM=
iAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAg=
MCAwLTExLjgxLjUybC01LjEyLTEyLjMzYzQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC0=
4LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNj=
YgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC43OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgN=
y42MSAyLjA5IDIwLjIxIDEwLjI0IDM4LjA2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4z=
Yy02LjU1LTYuODItMTcuMzEtMTMuNjQtMzAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTc=
uODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2ID=
ExLjggMy4xNCAxNyAxMi41OSAyMS41MSAzMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxL=
jM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLjktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0x=
My4zOSA1My4xNSA1My4xNSAwIDAgMCAyLjM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE=
0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIvPjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLj=
U0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5L=
TQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41=
MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2LTEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE=
3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhjLTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4Lj=
A5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xO=
S4xNi01My43OC00Ny43Ni01LTE5LjY4LTExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUu=
MjQtMS44NC01LjI0LTUuMjUgMC0zLjY5IDYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODc=
gOCAzMS4yMSAxOC42OGw1LjYxLTIuMDljLjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMT=
IuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDYtNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuN=
iAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNzggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYx=
IDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgNS40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA=
3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2ID=
EuODUgMTEuOC4wNyAxNi4yNi01LjE4IDEuMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1I=
DcuMiAwIDExLjkxLTQuMTMgMTUuNDktMTEuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3=
LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4=
yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC=
41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZ=
iIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4LjM4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4=
LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuNyAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi0=
1MC41NWE2LjEgNi4xIDAgMSAxLTYuMDktNi4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bT=
I1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSAxLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40O=
CA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3IDUuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAg=
MCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgMCAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQ=
zLTIuMTggNS43IDUuNyAwIDAgMSAuNDMtMi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2ID=
UuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTkgNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1L=
jMyIDAgMCAxIDIuMTguNDUgNS41IDUuNSAwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAx=
IC40NCAyLjE5IDUuNDQgNS40NCAwIDAgMS0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyA=
xLjc4IDUuNDcgNS40NyAwIDAgMS00IDEuNjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS=
0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjktMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuM=
yA0LjMgMCAwIDAtLjkxLTEuNDQgNC41IDQuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAw=
LTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtMS40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDU=
gNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMC=
AxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDEuNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40N=
CAwIDAgMSAuOTEuMTUgMS44NCAxLjg0IDAgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYu=
NTMgMS41NCAxLjU0IDAgMCAxIC4xMS41OSAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY=
4IDAgMCAxLS44My42NmwxLjM4IDIuMzRoLTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3=
ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzItLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgM=
CAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMCAwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQx=
ZDFiIi8+PC9zdmc+\\" style=3D\\"width: 200px;\\" width=3D\\"200\\"></div>
       =20

       =20
   =20

    <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Thank you for getting in touch.</p>
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">Here is a copy of the information you've submitted. We'll be =
in touch as soon as we can.</p>

   =20
    <div class=3D\\"summary\\">
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 16px; font-family: caecilia,sans-serif; =
border-bottom: 1px solid #e5007d; padding-bottom: 3px; font-weight: =
800;\\">Your details</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-family: caecilia=
,sans-serif; font-weight: 800;\\">Your name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Example Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Email address</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">example@example.com</p>
                       =
=20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Organisation name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
    </div>



       =20
           =20

            <h5 class=3D\\"space-above\\" style=3D\\"font-weight: 700; =
line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: 14px; =
margin-top: 50px; font-family: caecilia,sans-serif;\\">Data protection</h5>
            <small style=3D\\"display: block; font-size: 11px; color: #666; =
margin-bottom: 10px;\\">The National Lottery Community Fund is a public body =
with a duty to distribute National Lottery and other money in grants for =
good causes. We use the personal data you provide, such as contact details =
for individuals at your organisation, to help you apply for a grant and to =
assess your application.</small>
            <small style=3D\\"display: =
block; font-size: 11px; color: #666; margin-bottom: 10px;\\">We may share =
your personal data with organisations which help us with our grant making =
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data which they need to =
carry out their work and subject to appropriate safety measures.</small>
            <small style=3D\\"display: block; font-size: 11px; color: #666; =
margin-bottom: 10px;\\">Our Data Protection and Privacy Notice gives more =
information about how we store and use personal data and the lawful basis =
for this. Please read the full Notice which is published on our website at =
<a href=3D\\"https://www.tnlcommunityfund.org.uk/data-protection\\" =
style=3D\\"color: #0075b0; font-weight: 800;\\">www.tnlcommunityfund.org.=
uk/data-protection</a> or contact us to request a hard copy. The Notice may=
 be updated from time to time.</small>
       =20
    </body>
</html>

"
`;

exports[`Digital fund should create success emails 2`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>
To: Example Person <example@example.com>
Subject: New submission for Digital Fund Strand 1 from Test Organisation
MIME-Version: 1.0

Content-Type: text/plain
Content-Transfer-Encoding: quoted-printable

 NEW SUBMISSION FOR DIGITAL FUND STRAND 1
YOUR DETAILS
YOUR NAME
Example Person

EMAIL ADDRESS
example@example.com

ORGANISATION NAME
Test Organisation

DATA PROTECTION
The National Lottery Community Fund is a=
 public body with a duty to distribute National Lottery and other money in =
grants for good
causes. We use the personal data you provide, such as =
contact details for individuals at your organisation, to help you apply for
a grant and to assess your application. We may share your personal data =
with organisations which help us with our grant making
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data
which they need to carry out their work and subject to appropriate safety =
measures. Our Data Protection and Privacy Notice gives
more information about how we store and use personal data and the lawful =
basis for this. Please read the full Notice which is
published on our website at www.tnlcommunityfund.org.uk/data-protection =
[https://www.tnlcommunityfund.org.uk/data-protection] or
contact us to request a hard copy. The Notice may be updated from time to =
time.
Content-Type: text/html
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
       =20
            <style>
                @import url('https://use.typekit.net/yyc1dgh.css');
            </style>
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,p{color:#333;font-weight:400;font-size:2=
0px;line-height:1.35}.fonts-loaded body,.fonts-loaded =
p{font-family:caecilia-sans-text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,=
h6{font-weight:700;line-height:1.2;margin:0 0 20px;color:#e5007d}.=
fonts-loaded h1,.fonts-loaded h2,.fonts-loaded h3,.fonts-loaded h4,.=
fonts-loaded h5,.fonts-loaded h6{font-family:caecilia,=
sans-serif}h1{font-size:26px}h2{font-size:22px}h3{font-size:18px}h4{font-si=
ze:16px}h5{font-size:14px}h6{font-size:12px}a{color:#0075b0;font-weight:800=
}.logo{margin-bottom:20px;display:block}.logo img{width:200px}.summary =
h4{border-bottom:1px solid #e5007d;padding-bottom:3px}.summary h4,.summary =
h5{font-weight:800}small{display:block;font-size:11px;color:#666;margin-bot=
tom:10px}.space-above{margin-top:50px}
/*# sourceMappingURL=3Demails-rebran=
d.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: =
10px; margin: auto; color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">
       =20
            <div class=3D\\"logo\\" =
style=3D\\"margin-bottom: 20px; display: block;\\"><img alt=3D\\"\\" =
src=3D\\"data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMj=
AwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTEuMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5L=
jU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLjg5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5=
LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzLjMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0=
xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAxLjg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMj=
MtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyL=
jM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMTQgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTgu=
NjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwLTQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTY=
tMS42OSAxNCAxNCAwIDAgMC01LjUyIDEgMTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLj=
Y2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSAxNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxI=
DEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjgg=
MTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3IDE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCA=
wIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuOD=
QgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQuMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5I=
DAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwIDEgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEg=
MjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExIDUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCA=
yOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5ID=
AgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTEuODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2I=
DExLjA2IDAgMCAwIDMuOC0yLjkxIDEzIDEzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAw=
IDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwLTIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjg=
tMi45MSAxMi43OCAxMi43OCAwIDAgMC0xMC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLj=
kxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzUgNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxI=
DEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAx=
MS44MSAxMS44MSAwIDAgMCA1LjEyIDEuMDd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWw=
xMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOG=
gtNy4xNGwtOS41OC0xNi44LTEgMjguODFIMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExM=
WwxMS43MS0yMS40NGgxMi41M2wyLjI4IDQ5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2=
LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4LjgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDE=
xIDAgMCAwIDEuODggNi42NHExLjg4IDIuNTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LT=
IuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS44NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuM=
zMgMCAwIDEtMS41NSA4LjUxIDE3LjkyIDE3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUg=
MCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgMCAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTg=
uNTUtMS40IDE5LjczIDE5LjczIDAgMCAxLTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LT=
YuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQtOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40M=
VY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMTkuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAw=
aDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyLjk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0=
xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0ID=
ktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXYxOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhd=
GggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNTJ2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcu=
MzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoNi43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTY=
gNS44MSAxMS43MyAxMS43MyAwIDAgMCAxLjk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOT=
FhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSAxIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3I=
DguODcgMCAwIDAgMy42Ny0yLjkyIDEyIDEyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAw=
IDAgMCAuNTYtNS44MXYtMjcuNDhoNi43NnYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDc=
uNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xID=
I0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwI=
DAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMCAwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUu=
NjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4OWwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk=
5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAwIDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMS=
A4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwL=
jU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOSAxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcu=
MzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xIDQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS4=
0MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LT=
QuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTguNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yM=
iAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAg=
MCAwLTExLjgxLjUybC01LjEyLTEyLjMzYzQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC0=
4LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNj=
YgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC43OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgN=
y42MSAyLjA5IDIwLjIxIDEwLjI0IDM4LjA2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4z=
Yy02LjU1LTYuODItMTcuMzEtMTMuNjQtMzAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTc=
uODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2ID=
ExLjggMy4xNCAxNyAxMi41OSAyMS41MSAzMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxL=
jM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLjktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0x=
My4zOSA1My4xNSA1My4xNSAwIDAgMCAyLjM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE=
0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIvPjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLj=
U0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5L=
TQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41=
MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2LTEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE=
3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhjLTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4Lj=
A5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xO=
S4xNi01My43OC00Ny43Ni01LTE5LjY4LTExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUu=
MjQtMS44NC01LjI0LTUuMjUgMC0zLjY5IDYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODc=
gOCAzMS4yMSAxOC42OGw1LjYxLTIuMDljLjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMT=
IuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDYtNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuN=
iAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNzggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYx=
IDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgNS40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA=
3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2ID=
EuODUgMTEuOC4wNyAxNi4yNi01LjE4IDEuMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1I=
DcuMiAwIDExLjkxLTQuMTMgMTUuNDktMTEuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3=
LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4=
yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC=
41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZ=
iIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4LjM4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4=
LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuNyAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi0=
1MC41NWE2LjEgNi4xIDAgMSAxLTYuMDktNi4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bT=
I1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSAxLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40O=
CA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3IDUuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAg=
MCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgMCAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQ=
zLTIuMTggNS43IDUuNyAwIDAgMSAuNDMtMi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2ID=
UuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTkgNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1L=
jMyIDAgMCAxIDIuMTguNDUgNS41IDUuNSAwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAx=
IC40NCAyLjE5IDUuNDQgNS40NCAwIDAgMS0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyA=
xLjc4IDUuNDcgNS40NyAwIDAgMS00IDEuNjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS=
0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjktMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuM=
yA0LjMgMCAwIDAtLjkxLTEuNDQgNC41IDQuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAw=
LTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtMS40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDU=
gNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMC=
AxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDEuNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40N=
CAwIDAgMSAuOTEuMTUgMS44NCAxLjg0IDAgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYu=
NTMgMS41NCAxLjU0IDAgMCAxIC4xMS41OSAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY=
4IDAgMCAxLS44My42NmwxLjM4IDIuMzRoLTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3=
ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzItLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgM=
CAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMCAwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQx=
ZDFiIi8+PC9zdmc+\\" style=3D\\"width: 200px;\\" width=3D\\"200\\"></div>
       =20

       =20
    <h1 style=3D\\"font-weight: 700; line-height: 1.2; margin: 0 0=
 20px; color: #e5007d; font-size: 26px; font-family: caecilia,=
sans-serif;\\">New submission for Digital Fund Strand 1</h1>
   =20
    <div class=3D\\"summary\\">
       =20
            <h4 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
16px; font-family: caecilia,sans-serif; border-bottom: 1px solid #e5007d; =
padding-bottom: 3px; font-weight: 800;\\">Your details</h4>
           =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-family: caecilia,sans-serif; font-weight: 800;\\">Your name</h5>
                       =20
                            <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35; font-family: =
caecilia-sans-text,Trebuchet MS,sans-serif;\\">Example Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-family: caecilia=
,sans-serif; font-weight: 800;\\">Email address</h5>
                       =
=20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">example@example.com</p>
                       =
=20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Organisation name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
    </div>



       =20
           =20

            <h5 class=3D\\"space-above\\" style=3D\\"font-weight: 700; =
line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: 14px; =
margin-top: 50px; font-family: caecilia,sans-serif;\\">Data protection</h5>
            <small style=3D\\"display: block; font-size: 11px; color: #666; =
margin-bottom: 10px;\\">The National Lottery Community Fund is a public body =
with a duty to distribute National Lottery and other money in grants for =
good causes. We use the personal data you provide, such as contact details =
for individuals at your organisation, to help you apply for a grant and to =
assess your application.</small>
            <small style=3D\\"display: =
block; font-size: 11px; color: #666; margin-bottom: 10px;\\">We may share =
your personal data with organisations which help us with our grant making =
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data which they need to =
carry out their work and subject to appropriate safety measures.</small>
            <small style=3D\\"display: block; font-size: 11px; color: #666; =
margin-bottom: 10px;\\">Our Data Protection and Privacy Notice gives more =
information about how we store and use personal data and the lawful basis =
for this. Please read the full Notice which is published on our website at =
<a href=3D\\"https://www.tnlcommunityfund.org.uk/data-protection\\" =
style=3D\\"color: #0075b0; font-weight: 800;\\">www.tnlcommunityfund.org.=
uk/data-protection</a> or contact us to request a hard copy. The Notice may=
 be updated from time to time.</small>
       =20
    </body>
</html>

"
`;

exports[`Reaching communities should create success emails 1`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>
To: Example Person <example@example.com>
Subject: Thank you for getting in touch with The National Lottery Community
 Fund!
MIME-Version: 1.0

Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

 Thank you for getting in touch with us.

You will see a copy of the =
information you submitted below. This will be forwarded to one of our =
funding officers who will get in
touch within fifteen working days to let =
you know if we can help.

In the meantime, you can find out more about our =
funding and how we can support your community on our website:=20
www.tnlcommunityfund.org.uk/england [https://www.tnlcommunityfund.org.=
uk/england]

Thanks,

The National Lottery Community Fund

YOUR INFORMATION
YOUR IDEA
BRIEFLY EXPLAIN YOUR IDEA AND WHY IT=E2=80=99LL MAKE A DIFFERENCE
Test idea

PROJECT LOCATION
SELECT ALL REGIONS THAT APPLY
South West

PROJECT LOCATION
London

YOUR ORGANISATION
LEGAL NAME
Test Organisation

YOUR DETAILS
FIRST NAME
Example

LAST NAME
Person

EMAIL ADDRESS
example@example.com

PHONE NUMBER
03454102030

DATA PROTECTION
The National Lottery Community Fund is a public body with a duty to =
distribute National Lottery and other money in grants for good
causes. We use the personal data you provide, such as contact details for =
individuals at your organisation, to help you apply for
a grant and to assess your application. We may share your personal data =
with organisations which help us with our grant making
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data
which they need to carry out their work and subject to appropriate safety =
measures. Our Data Protection and Privacy Notice gives
more information about how we store and use personal data and the lawful =
basis for this. Please read the full Notice which is
published on our website at www.tnlcommunityfund.org.uk/data-protection =
[https://www.tnlcommunityfund.org.uk/data-protection] or
contact us to request a hard copy. The Notice may be updated from time to =
time.
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
       =20
            <style>
                @import url('https://use.typekit.net/yyc1dgh.css');
            </style>
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,p{color:#333;font-weight:400;font-size:2=
0px;line-height:1.35}.fonts-loaded body,.fonts-loaded =
p{font-family:caecilia-sans-text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,=
h6{font-weight:700;line-height:1.2;margin:0 0 20px;color:#e5007d}.=
fonts-loaded h1,.fonts-loaded h2,.fonts-loaded h3,.fonts-loaded h4,.=
fonts-loaded h5,.fonts-loaded h6{font-family:caecilia,=
sans-serif}h1{font-size:26px}h2{font-size:22px}h3{font-size:18px}h4{font-si=
ze:16px}h5{font-size:14px}h6{font-size:12px}a{color:#0075b0;font-weight:800=
}.logo{margin-bottom:20px;display:block}.logo img{width:200px}.summary =
h4{border-bottom:1px solid #e5007d;padding-bottom:3px}.summary h4,.summary =
h5{font-weight:800}small{display:block;font-size:11px;color:#666;margin-bot=
tom:10px}.space-above{margin-top:50px}
/*# sourceMappingURL=3Demails-rebran=
d.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: =
10px; margin: auto; color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">
       =20
            <div class=3D\\"logo\\" =
style=3D\\"margin-bottom: 20px; display: block;\\"><img alt=3D\\"\\" =
src=3D\\"data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMj=
AwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTEuMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5L=
jU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLjg5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5=
LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzLjMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0=
xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAxLjg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMj=
MtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyL=
jM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMTQgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTgu=
NjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwLTQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTY=
tMS42OSAxNCAxNCAwIDAgMC01LjUyIDEgMTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLj=
Y2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSAxNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxI=
DEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjgg=
MTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3IDE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCA=
wIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuOD=
QgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQuMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5I=
DAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwIDEgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEg=
MjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExIDUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCA=
yOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5ID=
AgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTEuODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2I=
DExLjA2IDAgMCAwIDMuOC0yLjkxIDEzIDEzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAw=
IDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwLTIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjg=
tMi45MSAxMi43OCAxMi43OCAwIDAgMC0xMC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLj=
kxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzUgNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxI=
DEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAx=
MS44MSAxMS44MSAwIDAgMCA1LjEyIDEuMDd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWw=
xMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOG=
gtNy4xNGwtOS41OC0xNi44LTEgMjguODFIMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExM=
WwxMS43MS0yMS40NGgxMi41M2wyLjI4IDQ5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2=
LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4LjgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDE=
xIDAgMCAwIDEuODggNi42NHExLjg4IDIuNTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LT=
IuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS44NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuM=
zMgMCAwIDEtMS41NSA4LjUxIDE3LjkyIDE3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUg=
MCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgMCAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTg=
uNTUtMS40IDE5LjczIDE5LjczIDAgMCAxLTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LT=
YuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQtOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40M=
VY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMTkuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAw=
aDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyLjk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0=
xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0ID=
ktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXYxOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhd=
GggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNTJ2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcu=
MzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoNi43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTY=
gNS44MSAxMS43MyAxMS43MyAwIDAgMCAxLjk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOT=
FhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSAxIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3I=
DguODcgMCAwIDAgMy42Ny0yLjkyIDEyIDEyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAw=
IDAgMCAuNTYtNS44MXYtMjcuNDhoNi43NnYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDc=
uNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xID=
I0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwI=
DAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMCAwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUu=
NjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4OWwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk=
5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAwIDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMS=
A4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwL=
jU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOSAxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcu=
MzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xIDQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS4=
0MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LT=
QuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTguNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yM=
iAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAg=
MCAwLTExLjgxLjUybC01LjEyLTEyLjMzYzQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC0=
4LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNj=
YgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC43OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgN=
y42MSAyLjA5IDIwLjIxIDEwLjI0IDM4LjA2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4z=
Yy02LjU1LTYuODItMTcuMzEtMTMuNjQtMzAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTc=
uODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2ID=
ExLjggMy4xNCAxNyAxMi41OSAyMS41MSAzMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxL=
jM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLjktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0x=
My4zOSA1My4xNSA1My4xNSAwIDAgMCAyLjM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE=
0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIvPjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLj=
U0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5L=
TQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41=
MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2LTEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE=
3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhjLTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4Lj=
A5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xO=
S4xNi01My43OC00Ny43Ni01LTE5LjY4LTExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUu=
MjQtMS44NC01LjI0LTUuMjUgMC0zLjY5IDYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODc=
gOCAzMS4yMSAxOC42OGw1LjYxLTIuMDljLjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMT=
IuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDYtNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuN=
iAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNzggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYx=
IDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgNS40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA=
3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2ID=
EuODUgMTEuOC4wNyAxNi4yNi01LjE4IDEuMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1I=
DcuMiAwIDExLjkxLTQuMTMgMTUuNDktMTEuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3=
LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4=
yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC=
41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZ=
iIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4LjM4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4=
LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuNyAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi0=
1MC41NWE2LjEgNi4xIDAgMSAxLTYuMDktNi4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bT=
I1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSAxLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40O=
CA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3IDUuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAg=
MCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgMCAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQ=
zLTIuMTggNS43IDUuNyAwIDAgMSAuNDMtMi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2ID=
UuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTkgNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1L=
jMyIDAgMCAxIDIuMTguNDUgNS41IDUuNSAwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAx=
IC40NCAyLjE5IDUuNDQgNS40NCAwIDAgMS0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyA=
xLjc4IDUuNDcgNS40NyAwIDAgMS00IDEuNjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS=
0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjktMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuM=
yA0LjMgMCAwIDAtLjkxLTEuNDQgNC41IDQuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAw=
LTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtMS40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDU=
gNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMC=
AxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDEuNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40N=
CAwIDAgMSAuOTEuMTUgMS44NCAxLjg0IDAgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYu=
NTMgMS41NCAxLjU0IDAgMCAxIC4xMS41OSAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY=
4IDAgMCAxLS44My42NmwxLjM4IDIuMzRoLTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3=
ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzItLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgM=
CAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMCAwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQx=
ZDFiIi8+PC9zdmc+\\" style=3D\\"width: 200px;\\" width=3D\\"200\\"></div>
       =20

       =20
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">Thank you for getting in touch with us.</p>

    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">You will see a copy of the information you submitted below. =
This will be forwarded to one of our funding officers who will get in touch=
 within fifteen working days to let you know if we can help.</p>
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">In the meantime, you can find out more about our funding and =
how we can support your community on our website: <a href=3D\\"https://www.=
tnlcommunityfund.org.uk/england\\" style=3D\\"color: #0075b0; font-weight: =
800;\\">www.tnlcommunityfund.org.uk/england</a></p>
    <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35; font-family: =
caecilia-sans-text,Trebuchet MS,sans-serif;\\">Thanks,</p>
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\"><strong>The National Lottery Community Fund</strong></p>

    <h2 style=3D\\"font-weight: 700; line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 22px; font-family: caecilia,sans-serif;\\">Your =
information</h2>
   =20
    <div class=3D\\"summary\\">
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; color: =
#e5007d; font-size: 16px; font-family: caecilia,sans-serif; border-bottom: =
1px solid #e5007d; padding-bottom: 3px; font-weight: 800;\\">Your idea</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Briefly explain your idea and why it=E2=80=99ll make a =
difference</h5>
                       =20
                            <p =
style=3D\\"color: #333; font-weight: 400; font-size: 20px; line-height: 1.35;=
 font-family: caecilia-sans-text,Trebuchet MS,sans-serif;\\">Test idea</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; color: =
#e5007d; font-size: 16px; font-family: caecilia,sans-serif; border-bottom: =
1px solid #e5007d; padding-bottom: 3px; font-weight: 800;\\">Project =
location</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Select all regions that apply</h5>
                       =20
                            <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35; font-family: =
caecilia-sans-text,Trebuchet MS,sans-serif;\\">South West</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-family: caecilia=
,sans-serif; font-weight: 800;\\">Project location</h5>
                       =20
                            <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35; font-family: =
caecilia-sans-text,Trebuchet MS,sans-serif;\\">London</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; color: =
#e5007d; font-size: 16px; font-family: caecilia,sans-serif; border-bottom: =
1px solid #e5007d; padding-bottom: 3px; font-weight: 800;\\">Your =
organisation</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-family: caecilia=
,sans-serif; font-weight: 800;\\">Legal name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 16px; font-family: caecilia,sans-serif; =
border-bottom: 1px solid #e5007d; padding-bottom: 3px; font-weight: =
800;\\">Your details</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-family: caecilia=
,sans-serif; font-weight: 800;\\">First name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Example</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Last name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Email address</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">example@example.com</p>
                       =
=20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Phone number</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">03454102030</p>
                       =20
                   =20
       =20
    </div>



       =20
           =20

            <h5 class=3D\\"space-above\\" style=3D\\"font-weight: 700; =
line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: 14px; =
margin-top: 50px; font-family: caecilia,sans-serif;\\">Data protection</h5>
            <small style=3D\\"display: block; font-size: 11px; color: #666; =
margin-bottom: 10px;\\">The National Lottery Community Fund is a public body =
with a duty to distribute National Lottery and other money in grants for =
good causes. We use the personal data you provide, such as contact details =
for individuals at your organisation, to help you apply for a grant and to =
assess your application.</small>
            <small style=3D\\"display: =
block; font-size: 11px; color: #666; margin-bottom: 10px;\\">We may share =
your personal data with organisations which help us with our grant making =
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data which they need to =
carry out their work and subject to appropriate safety measures.</small>
            <small style=3D\\"display: block; font-size: 11px; color: #666; =
margin-bottom: 10px;\\">Our Data Protection and Privacy Notice gives more =
information about how we store and use personal data and the lawful basis =
for this. Please read the full Notice which is published on our website at =
<a href=3D\\"https://www.tnlcommunityfund.org.uk/data-protection\\" =
style=3D\\"color: #0075b0; font-weight: 800;\\">www.tnlcommunityfund.org.=
uk/data-protection</a> or contact us to request a hard copy. The Notice may=
 be updated from time to time.</small>
       =20
    </body>
</html>

"
`;

exports[`Reaching communities should create success emails 2`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@blf.digital>
To: southwestteam@tnlcommunityfund.org.uk
Subject: New idea submission from website: Test Organisation
MIME-Version: 1.0

Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

 A CUSTOMER HAS SUBMITTED AN IDEA FROM THE REACHING COMMUNITIES & =
PARTNERSHIPS WEB FORM.
The details they provided are included below:

CUSTOMER INFORMATION
YOUR DETAILS
FIRST NAME
Example

LAST NAME
Person

EMAIL ADDRESS
example@example.com

PHONE NUMBER
03454102030

YOUR ORGANISATION
LEGAL NAME
Test Organisation

PROJECT LOCATION
SELECT ALL REGIONS THAT APPLY
South West

PROJECT LOCATION
London

YOUR IDEA
BRIEFLY EXPLAIN YOUR IDEA AND WHY IT=E2=80=99LL MAKE A DIFFERENCE
Test idea
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
       =20
            <style>
                @import url('https://use.typekit.net/yyc1dgh.css');
            </style>
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,p{color:#333;font-weight:400;font-size:2=
0px;line-height:1.35}.fonts-loaded body,.fonts-loaded =
p{font-family:caecilia-sans-text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,=
h6{font-weight:700;line-height:1.2;margin:0 0 20px;color:#e5007d}.=
fonts-loaded h1,.fonts-loaded h2,.fonts-loaded h3,.fonts-loaded h4,.=
fonts-loaded h5,.fonts-loaded h6{font-family:caecilia,=
sans-serif}h1{font-size:26px}h2{font-size:22px}h3{font-size:18px}h4{font-si=
ze:16px}h5{font-size:14px}h6{font-size:12px}a{color:#0075b0;font-weight:800=
}.logo{margin-bottom:20px;display:block}.logo img{width:200px}.summary =
h4{border-bottom:1px solid #e5007d;padding-bottom:3px}.summary h4,.summary =
h5{font-weight:800}small{display:block;font-size:11px;color:#666;margin-bot=
tom:10px}.space-above{margin-top:50px}
/*# sourceMappingURL=3Demails-rebran=
d.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: =
10px; margin: auto; color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">
       =20
            <div class=3D\\"logo\\" =
style=3D\\"margin-bottom: 20px; display: block;\\"><img alt=3D\\"\\" =
src=3D\\"data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMj=
AwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTEuMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5L=
jU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLjg5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5=
LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzLjMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0=
xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAxLjg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMj=
MtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyL=
jM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMTQgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTgu=
NjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwLTQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTY=
tMS42OSAxNCAxNCAwIDAgMC01LjUyIDEgMTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLj=
Y2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSAxNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxI=
DEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjgg=
MTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3IDE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCA=
wIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuOD=
QgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQuMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5I=
DAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwIDEgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEg=
MjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExIDUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCA=
yOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5ID=
AgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTEuODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2I=
DExLjA2IDAgMCAwIDMuOC0yLjkxIDEzIDEzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAw=
IDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwLTIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjg=
tMi45MSAxMi43OCAxMi43OCAwIDAgMC0xMC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLj=
kxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzUgNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxI=
DEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAx=
MS44MSAxMS44MSAwIDAgMCA1LjEyIDEuMDd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWw=
xMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOG=
gtNy4xNGwtOS41OC0xNi44LTEgMjguODFIMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExM=
WwxMS43MS0yMS40NGgxMi41M2wyLjI4IDQ5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2=
LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4LjgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDE=
xIDAgMCAwIDEuODggNi42NHExLjg4IDIuNTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LT=
IuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS44NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuM=
zMgMCAwIDEtMS41NSA4LjUxIDE3LjkyIDE3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUg=
MCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgMCAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTg=
uNTUtMS40IDE5LjczIDE5LjczIDAgMCAxLTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LT=
YuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQtOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40M=
VY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMTkuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAw=
aDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyLjk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0=
xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0ID=
ktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXYxOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhd=
GggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNTJ2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcu=
MzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoNi43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTY=
gNS44MSAxMS43MyAxMS43MyAwIDAgMCAxLjk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOT=
FhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSAxIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3I=
DguODcgMCAwIDAgMy42Ny0yLjkyIDEyIDEyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAw=
IDAgMCAuNTYtNS44MXYtMjcuNDhoNi43NnYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDc=
uNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xID=
I0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwI=
DAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMCAwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUu=
NjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4OWwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk=
5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAwIDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMS=
A4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwL=
jU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOSAxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcu=
MzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xIDQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS4=
0MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LT=
QuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTguNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yM=
iAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAg=
MCAwLTExLjgxLjUybC01LjEyLTEyLjMzYzQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC0=
4LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNj=
YgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC43OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgN=
y42MSAyLjA5IDIwLjIxIDEwLjI0IDM4LjA2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4z=
Yy02LjU1LTYuODItMTcuMzEtMTMuNjQtMzAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTc=
uODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2ID=
ExLjggMy4xNCAxNyAxMi41OSAyMS41MSAzMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxL=
jM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLjktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0x=
My4zOSA1My4xNSA1My4xNSAwIDAgMCAyLjM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE=
0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIvPjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLj=
U0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5L=
TQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41=
MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2LTEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE=
3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhjLTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4Lj=
A5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xO=
S4xNi01My43OC00Ny43Ni01LTE5LjY4LTExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUu=
MjQtMS44NC01LjI0LTUuMjUgMC0zLjY5IDYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODc=
gOCAzMS4yMSAxOC42OGw1LjYxLTIuMDljLjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMT=
IuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDYtNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuN=
iAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNzggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYx=
IDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgNS40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA=
3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2ID=
EuODUgMTEuOC4wNyAxNi4yNi01LjE4IDEuMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1I=
DcuMiAwIDExLjkxLTQuMTMgMTUuNDktMTEuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3=
LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZD0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4=
yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC=
41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZ=
iIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4LjM4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4=
LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuNyAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi0=
1MC41NWE2LjEgNi4xIDAgMSAxLTYuMDktNi4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bT=
I1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSAxLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40O=
CA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3IDUuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAg=
MCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgMCAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQ=
zLTIuMTggNS43IDUuNyAwIDAgMSAuNDMtMi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2ID=
UuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTkgNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1L=
jMyIDAgMCAxIDIuMTguNDUgNS41IDUuNSAwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAx=
IC40NCAyLjE5IDUuNDQgNS40NCAwIDAgMS0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyA=
xLjc4IDUuNDcgNS40NyAwIDAgMS00IDEuNjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS=
0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjktMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuM=
yA0LjMgMCAwIDAtLjkxLTEuNDQgNC41IDQuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAw=
LTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtMS40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDU=
gNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMC=
AxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDEuNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40N=
CAwIDAgMSAuOTEuMTUgMS44NCAxLjg0IDAgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYu=
NTMgMS41NCAxLjU0IDAgMCAxIC4xMS41OSAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY=
4IDAgMCAxLS44My42NmwxLjM4IDIuMzRoLTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3=
ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzItLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgM=
CAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMCAwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQx=
ZDFiIi8+PC9zdmc+\\" style=3D\\"width: 200px;\\" width=3D\\"200\\"></div>
       =20

       =20
    <h1 style=3D\\"font-weight: 700; line-height: 1.2; margin: 0 0=
 20px; color: #e5007d; font-size: 26px; font-family: caecilia,=
sans-serif;\\">A customer has submitted an idea from the Reaching Communities=
 &amp; Partnerships web form.</h1>
    <p style=3D\\"color: #333; =
font-weight: 400; font-size: 20px; line-height: 1.35; font-family: =
caecilia-sans-text,Trebuchet MS,sans-serif;\\">The details they provided are =
included below:</p>
    <h2 class=3D\\"space-above\\" style=3D\\"font-weight: =
700; line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: 22px; =
margin-top: 50px; font-family: caecilia,sans-serif;\\">Customer =
information</h2>
   =20
    <div class=3D\\"summary\\">
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; color: =
#e5007d; font-size: 16px; font-family: caecilia,sans-serif; border-bottom: =
1px solid #e5007d; padding-bottom: 3px; font-weight: 800;\\">Your =
details</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">First name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Example</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Last name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Email address</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">example@example.com</p>
                       =
=20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Phone number</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">03454102030</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 16px; font-family: caecilia=
,sans-serif; border-bottom: 1px solid #e5007d; padding-bottom: 3px; =
font-weight: 800;\\">Your organisation</h4>
           =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-family: caecilia,sans-serif; font-weight: 800;\\">Legal name</h5>
                       =20
                            <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35; font-family: =
caecilia-sans-text,Trebuchet MS,sans-serif;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 16px; font-family: caecilia=
,sans-serif; border-bottom: 1px solid #e5007d; padding-bottom: 3px; =
font-weight: 800;\\">Project location</h4>
           =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-family: caecilia,sans-serif; font-weight: 800;\\">Select all =
regions that apply</h5>
                       =20
                        =
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35; font-family: caecilia-sans-text,Trebuchet MS,=
sans-serif;\\">South West</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-family: caecilia,sans-serif; =
font-weight: 800;\\">Project location</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">London</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 16px; font-family: caecilia=
,sans-serif; border-bottom: 1px solid #e5007d; padding-bottom: 3px; =
font-weight: 800;\\">Your idea</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-family: caecilia=
,sans-serif; font-weight: 800;\\">Briefly explain your idea and why =
it=E2=80=99ll make a difference</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35; font-family: caecilia-sans-text,=
Trebuchet MS,sans-serif;\\">Test idea</p>
                       =20
                   =20
       =20
    </div>



       =20
    </body>
</html>

"
`;
